# SolidDrawings

./: # SOLIDWORKS UXUI Compatibility Aud.md  .env.example  .gitignore  AGENTS.md  DEBUG_SUMMARY.md  DEV_LOG.md  DEV_LOG_Sweep_Addendum.md  GEMINI.md  INSTALL.ps1  L-Bracket.sldprt.md  LAUNCH-3D-BUILDER.ps1  PLAN.md  PROJECT_DEVELOPMENT_SOP.html  PROJECT_ROADMAP.md  README.md  RELEASE_NOTES.md  SOLIDWORKS_FEATURE_ROADMAP.md  SOLIDWORKS_MASTER_PLAN.md  START-ELECTRON.ps1  apply_patches.py  diagnose.py  diagnose2.py  eslint.config.mjs  fetch_lxp.py  fetch_transcript_v3.py  findings.md  fix_matepanel.py  fix_page_hud.py  gap-analysis-report.md  gap-audit-report.md  gap-checklist.md  get_full_transcript.py  goal 啟動 SkillsBuilder 閉環機制.md  handover_resume_guide.md  implementation_plan.md  jest.config.js  next.config.ts  package-lock.json  package.json  patch_page_drawing.py  (+23 more)
backend/: SETUP.md  check_occ_api.py  pyproject.toml  requirements.txt  solve_sketch_demo.py  test_hlr.py
backend/app/: main.py
backend/tests/: conftest.py  e2e_coca_cola_sim.py  e2e_exercise_10_sim.py  e2e_pz2_bit.py  e2e_spanner_native_sim.py  e2e_stress_test_sim.py  e2e_video3_sim.py  e2e_video58_sim.py  e2e_video5_sim.py  e2e_video_05NN229l2Wc_sim.py  e2e_video_9B7CFz_jKpg_sim.py  e2e_video_AGDV78Jmo3k_sim.py  e2e_video_KIxyS5mb7zY_sim.py  e2e_video_MxB_3Lq0qGA_sim.py  e2e_video_axLwYdBmJ0o_sim.py  e2e_video_bxaio0HCzh8_sim.py  e2e_video_cWWP_sim.py  e2e_video_ex6_sim.py  e2e_video_gxIlg9irqHU_local_sim.py  e2e_video_gxIlg9irqHU_sim.py  e2e_video_kTgbW1hrMn0_sim.py  e2e_video_mWhWNJ09O5c_sim.py  (+34 more)
(+507 files in other folders)
